[gd_scene load_steps=12 format=3 uid="uid://dd6cdje4hw22c"]

[ext_resource type="Script" uid="uid://dimmd5uswjl33" path="res://Other/Scenes/User Interface/HUD/player_abilities.gd" id="1_rw8je"]
[ext_resource type="Texture2D" uid="uid://cgij2ayo7erbd" path="res://Assets/Graphics/sprites/sprites_userInterface.png" id="1_snupr"]
[ext_resource type="PackedScene" uid="uid://skepiw51uev8" path="res://Other/Scenes/User Interface/HUD/projectile_charge_slot.tscn" id="3_q78fb"]
[ext_resource type="Theme" uid="uid://8i27k6tj1d3o" path="res://Other/Themes/basic.tres" id="3_x6dem"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rw8je"]
atlas = ExtResource("1_snupr")
region = Rect2(576, 64, 32, 64)

[sub_resource type="Animation" id="Animation_we4ac"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fill2:size:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("fill2:size:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("fill2:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("fill2:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(54, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("fill3:size:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("fill3:size:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(3, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("fill3:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(7, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("fill3:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(57, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("fill4:size:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("fill4:size:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("fill4:position:x")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(12, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("fill4:position:y")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(59, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/12/type = "bezier"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("fill:size:x")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.0005, 0, 0.0005, 0),
"times": PackedFloat32Array(0.001)
}
tracks/13/type = "bezier"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("fill:size:y")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(39, -0.0005, 0, 0.0005, 0),
"times": PackedFloat32Array(0.001)
}
tracks/14/type = "bezier"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("fill:position:x")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(4, -0.0005, 0, 0.0005, 0),
"times": PackedFloat32Array(0.001)
}
tracks/15/type = "bezier"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("fill:position:y")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(15, -0.0005, 0, 0.0005, 0),
"times": PackedFloat32Array(0.001)
}

[sub_resource type="Animation" id="Animation_j74ug"]
resource_name = "show"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fill:size:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 21, -1, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("fill:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(4, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("fill:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(15, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("fill2:size:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 20, -0.975, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("fill2:size:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(3, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("fill2:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(5, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("fill2:position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(54, -0.25, 0, 0.25, 0, 54, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("fill3:size:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 17, -0.9, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("fill3:size:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("fill3:position:x")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(8, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("fill3:position:y")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(57, -0.25, 0, 0.25, 0, 57, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("fill4:size:x")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 13, -0.78, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/12/type = "bezier"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("fill4:size:y")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/13/type = "bezier"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("fill4:position:x")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(12, -0.25, 0, 0.25, 0, 12, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/14/type = "bezier"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("fill4:position:y")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(59, -0.25, 0, 0.25, 0, 59, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q78fb"]
_data = {
&"RESET": SubResource("Animation_we4ac"),
&"slot_left_show": SubResource("Animation_j74ug")
}

[sub_resource type="Animation" id="Animation_q78fb"]
resource_name = "glow"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_rmab4"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jvktk"]
_data = {
&"RESET": SubResource("Animation_rmab4"),
&"glow": SubResource("Animation_q78fb")
}

[node name="player_abilities" type="Control"]
modulate = Color(2, 2, 2, 1)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rw8je")

[node name="projectile_charges_left" type="Control" parent="."]
anchors_preset = 0

[node name="TextureRect" type="TextureRect" parent="projectile_charges_left"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 64.0
texture = SubResource("AtlasTexture_rw8je")

[node name="slot_fill" type="Control" parent="projectile_charges_left"]
layout_mode = 3
anchors_preset = 0

[node name="fill" type="ColorRect" parent="projectile_charges_left/slot_fill"]
z_index = -1
layout_mode = 0
offset_left = 4.0
offset_top = 15.0
offset_right = 4.0
offset_bottom = 54.0
color = Color(0, 0.352941, 1, 1)

[node name="fill2" type="ColorRect" parent="projectile_charges_left/slot_fill"]
z_index = -1
layout_mode = 0
offset_left = 5.0
offset_top = 54.0
offset_right = 5.0
offset_bottom = 59.0
color = Color(0, 0.352941, 1, 1)

[node name="fill3" type="ColorRect" parent="projectile_charges_left/slot_fill"]
z_index = -1
layout_mode = 0
offset_left = 7.0
offset_top = 57.0
offset_right = 7.0
offset_bottom = 60.0
color = Color(0, 0.352941, 1, 1)

[node name="fill4" type="ColorRect" parent="projectile_charges_left/slot_fill"]
z_index = -1
layout_mode = 0
offset_left = 12.0
offset_top = 59.0
offset_right = 12.0
offset_bottom = 61.0
color = Color(0, 0.352941, 1, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="projectile_charges_left/slot_fill"]
libraries = {
&"": SubResource("AnimationLibrary_q78fb")
}

[node name="projectile_charges_middle" type="Control" parent="."]
anchors_preset = 0

[node name="projectile_charge_slot" parent="projectile_charges_middle" instance=ExtResource("3_q78fb")]

[node name="projectile_charges_right" type="Control" parent="."]
anchors_preset = 0

[node name="debug_charges +" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = -16.0
theme = ExtResource("3_x6dem")
text = "+1"

[node name="debug_charges +10" type="Button" parent="."]
layout_mode = 0
offset_top = -144.0
offset_right = 64.0
offset_bottom = -80.0
theme = ExtResource("3_x6dem")
text = "+10"

[node name="debug_charges_max +" type="Button" parent="."]
layout_mode = 0
offset_left = -144.0
offset_top = -64.0
offset_right = -48.0
offset_bottom = -16.0
theme = ExtResource("3_x6dem")
text = "max+1"

[node name="debug_charges -" type="Button" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = -64.0
offset_right = 128.0
offset_bottom = -16.0
theme = ExtResource("3_x6dem")
text = "-1"

[node name="debug_charges -10" type="Button" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = -144.0
offset_right = 144.0
offset_bottom = -80.0
theme = ExtResource("3_x6dem")
text = "-10"

[node name="debug_charges_max -" type="Button" parent="."]
layout_mode = 0
offset_left = -144.0
offset_top = -128.0
offset_right = -48.0
offset_bottom = -80.0
theme = ExtResource("3_x6dem")
text = "max-1"

[node name="slots_max" type="Label" parent="."]
layout_mode = 0
offset_left = -208.0
offset_top = -96.0
offset_right = -160.0
offset_bottom = -48.0
theme = ExtResource("3_x6dem")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="slots_active" type="Label" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = -96.0
offset_right = 192.0
offset_bottom = -48.0
theme = ExtResource("3_x6dem")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="timer_block_buttons" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jvktk")
}

[connection signal="pressed" from="debug_charges +" to="." method="_on_debug_charges_add_pressed"]
[connection signal="pressed" from="debug_charges +10" to="." method="_on_debug_charges_add_10_pressed"]
[connection signal="pressed" from="debug_charges_max +" to="." method="_on_debug_charges_max_add_pressed"]
[connection signal="pressed" from="debug_charges -" to="." method="_on_debug_charges_subtract_pressed"]
[connection signal="pressed" from="debug_charges -10" to="." method="_on_debug_charges_subtract_10_pressed"]
[connection signal="pressed" from="debug_charges_max -" to="." method="_on_debug_charges_max_subtract_pressed"]
[connection signal="timeout" from="timer_block_buttons" to="." method="_on_timer_block_buttons_timeout"]
